# agility

./: .gitignore  Agility.uplugin  CLAUDE.md  README.md  THANKS.md
.claude/skills/public-repo-audit/: SKILL.md
Config/: DefaultInput.ini  Input.ini
Content/Maps/: FlappyBird.umap  HelloServer.umap  HelloUE5.umap
Content/Materials/: M_AgilityNeonEmissive.uasset  M_AgilityVideoUnlit.uasset  M_MeshLab_FractalGlow.uasset  M_MeshLab_Liquid.uasset
Docs/: development-setup.md
Docs/design/: compose-ui-style.md
Docs/tutorials/: 01-hello-unreal.md  README.md
Docs/tutorials/compose-android/: 00-scope.md
Docs/tutorials/flappybird/: 00-scope.md  01-bird-and-flap.md  02-pipes-and-background.md  03-score-and-state.md  README.md
Docs/tutorials/proceduralmesh/: 00-scope.md
Shaders/: MeshLab.ush
Source/Agility/: Agility.Build.cs  Agility.cpp
Source/Agility/Android/: Agility_UPL_Android.xml
Source/Agility/Compose/: AgilityComposeCounterActor.cpp  AgilityComposeCounterActor.h  AgilityComposeOverlay.cpp  AgilityComposeOverlay.h  AgilityComposeWorldSubsystem.cpp  AgilityComposeWorldSubsystem.h
Source/Agility/FlappyBird/: FlappyBackground.cpp  FlappyBackground.h  FlappyBird.cpp  FlappyBird.h  FlappyBirdConstants.h  FlappyBirdGameMode.cpp  FlappyBirdGameMode.h  FlappyBirdHUD.cpp  FlappyBirdHUD.h  FlappyNeonMaterials.cpp  FlappyNeonMaterials.h  PipePair.cpp  (+3 more)
python/: README.md  pyproject.toml
python/experiments/: README.md
python/experiments/video-playback/: README.md  main.py
python/server/: README.md  main.py  video_stream.py
python/server/data/: README.md
(+26 files in other folders)
